[package]
name = "iroh-dpc-rpc"
version = "0.1.0"
edition = "2024"
license = "MIT OR APACHE-2.0 OR MPL-2.0"
description = "dpc's Iroh rpc library"

[features]
default = ["bincode", "bao"]
bincode = ["dep:bincode"]
bao = ["dep:bao-tree"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bao-tree = { version = "0.13", optional = true }
bincode = { version = "2.0.0", features = ["derive"], optional = true }
bon = "3.3.0"
convi = { version = "0.1.1", features = ["min_target_pointer_width_32"] }
derive_more = { version = "2.0.1", features = ["from"] }
fnv = "1.0.7"
futures-lite = "2.6.0"
iroh = { version = "0.34.0", default-features = false }
iroh-base = { version = "0.34.0", default-features = false, features = [
  "ticket",
] }
iroh-io = "0.6.0"
rand = "0.8.0"
redb = "2.3.0"
snafu = { version = "0.8.5", features = ["rust_1_81"] }
tokio = { version = "1.44.2", features = ["macros"] }
tracing = "0.1.41"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }


[profile]

[profile.ci]
inherits = "dev"
incremental = false
debug = "line-tables-only"
lto = "off"
